# AI-Pipeline

./: .env.example  .flake8  .gitignore  CHANGELOG.md  Dockerfile  README.md  bug_report_service.py  config.py  docker-compose.yml  docker-start.sh  example_usage.py  kafka_utils.py  models.py  podman-setup.md  pyproject.toml  pytest.ini  requirements-test.txt  requirements.txt  run_tests.py  state_manager.py
.github/maintainer/: config.yml
.github/workflows/: ci.yml  maintainer.yml
agents/: __init__.py  base_agent.py  coordinator_agent.py  github_api_agent.py  ticket_creation_agent.py  triage_agent.py
docs/: API.md  ARCHITECTURE.md  DEPLOYMENT.md  OPERATIONS.md
tests/: conftest.py
tests/integration/: test_end_to_end.py
tests/unit/: test_bug_report_service.py  test_models.py
